# 50-days-of-ml

./: .gitignore  main.py  pyproject.toml
Day-10/: pipe.pkl  predict_with_pipeline.ipynb  with_pipepline.ipynb  without_pipeline.ipynb
Day-11/: function-transformer.ipynb  power-transform.ipynb
Day-12/: discretization-and-binarization.md
Day-2/: working-with-csv-and-json.ipynb
Day-4/: EDA-univariate-data.ipynb
Day-5/: EDA-tools-for-pandas.ipynb
Day-7/: standardization.ipynb
Day-8/: feature-engineering2.md  ordinal-encoding.ipynb
day01-basic-intro/: basics-of-ml.md
day02-fetching-data/: fetching-data-from-api.ipynb  working-with-sql.ipynb
day03-fetching-data-web-scrapping/: web-scrapping.ipynb
day04-EDA-univariate-and-bivariate-data/: EDA-bivariate-and-multivariate-data.ipynb
day06-handling-mixed-and-time-data/: handling-mixed-data.ipynb
day07-standardization-and-normalization/: feature-engineering1.md  normalization.ipynb
day08-data-encoding/: label-encoder.ipynb
day09-column-transformer/: column-transformer.ipynb
day11-function-and-power-transformer/: mathematical_transformation.md
day12-binning-and-binarization/: binarization.ipynb  discretization.ipynb
day13-imputing-data-1-cca/: cca.ipynb  handling_missing_data.md
day14-imputing-numerical-and-categorical-data/: arbitrary-value-imputation.ipynb  frequent-value-imputation.ipynb  mean-median-imputation.ipynb  missing-category-imputation.ipynb  readme.md
day15-multivariate-imputation/: KNN-imputer.ipynb  MICE.ipynb
day16-outliers/: outlier-removal-using-iqr.ipynb  readme.md  (+2 more)
(+16 files in other folders)
